# website

./: README.md  pyproject.toml  update.sh
public/: about.md  access-counter.html  base.html  daily-quote.html  download-banner.md  error-nginx.html  error.html  index.html  links.html  projects.html  public-key.html  qr-code.html  quotes.txt  robots.txt  server-version.html  service-worker.js  shorturls.json  sitemap.xml
public/assets/css/: main.css
public/assets/js/: main.js
public/test/: font-family.md
public/to/: 404.html
src/nercone_website/: __main__.py  config.py  database.py  error.py  logger.py  middleware.py  proxy.py  server.py
